Removed overflow auto from topiclist class to stop scroll bars showing

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -325,7 +325,6 @@ body.ie6 #blq-main #blq-content .pagination li {
 #blq-content .topiclist br {display:none;}
 
 #blq-content .topiclist {
-	overflow:auto;
 	padding: 0;
 }
 #blq-content h3 {
